# rag-chatbot-senior

./: .dockerignore  .env  .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pre-commit-config.yaml  pyproject.toml  sample.md  test.md
.github/workflows/: ci.yml
backend/: .dockerignore  Dockerfile  requirements.txt
backend/prompts/: system_en.j2  system_en_v1.j2  system_ru.j2  system_ru_v1.j2
backend/server/: main.py
backend/server/api/: deps.py
backend/server/api/routers/: admin.py  chat.py  ingest.py
backend/server/core/: config.py  logging.py  security.py
backend/server/db/: __init__.py  docstore.py  models.py  session.py
backend/server/schemas/: base.py  chat.py  ingest.py
backend/server/services/: bm25.py  chunking.py  embeddings.py  indexing.py  interfaces.py  llm.py  prompting.py  reranker.py  retriever.py  vectorstore.py
backend/server/tasks/: celery_app.py  ingest.py  worker.py
backend/server/telemetry/: metrics.py
backend/tests/: test_e2e_ingest_chat.py  test_hash_embeddings.py  test_ingest.py
compose/grafana/dashboards/: rag.json
compose/grafana/provisioning/dashboards/: dashboards.yaml
compose/loki/: config.yml
compose/prometheus/: prometheus.yml
frontend/: .env  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.cjs  tsconfig.json
frontend/src/: App.tsx  types.ts
frontend/src/api/: client.ts
frontend/src/components/: Chat.tsx  Upload.tsx
scripts/: up.ps1
