[project]
name = "rag-chatbot-senior"
version = "0.1.0"
description = "Senior-level RAG chatbot backend"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.112",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.8",
  "pydantic-settings>=2.4",
  "python-multipart>=0.0.9",
  "aiofiles>=23.2",
  "sqlalchemy[asyncio]>=2.0",
  "aiosqlite>=0.20",
  "httpx>=0.27",
  "orjson>=3.10",
  "loguru>=0.7",
  "prometheus-client>=0.20",
  "slowapi>=0.1.9",
  "celery>=5.4",
  "redis>=5.0",
  "qdrant-client>=1.11",
  "faiss-cpu>=1.8.0.post1",
  "numpy>=1.26",
  "scikit-learn>=1.5",
  "rank-bm25>=0.2.2",
  "sentence-transformers>=3.0",
  "tiktoken>=0.7",
  "Jinja2>=3.1.4",
]

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = [
    "rank_bm25",
    "celery",
    "jwt",
    "sqlalchemy",
    "sqlalchemy.*",
    "sentence_transformers",
    "qdrant_client",
    "qdrant_client.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
pythonpath = ["backend"]
